@@ -1573,40 +1573,6 @@ literal|"BD"
 argument_list|)
 condition|)
 block|{
-name|Directory
-name|dir
-decl_stmt|;
-if|if
-condition|(
-name|segmentInfos
-operator|.
-name|size
-argument_list|()
-operator|>
-literal|0
-condition|)
-block|{
-name|dir
-operator|=
-name|segmentInfos
-operator|.
-name|info
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|info
-operator|.
-name|dir
-expr_stmt|;
-block|}
-else|else
-block|{
-name|dir
-operator|=
-literal|null
-expr_stmt|;
-block|}
 name|infoStream
 operator|.
 name|message
@@ -2482,26 +2448,34 @@ name|queue
 init|=
 literal|null
 decl_stmt|;
+name|BytesRef
+name|term
+decl_stmt|;
 while|while
 condition|(
-literal|true
-condition|)
-block|{
-name|boolean
-name|newField
-decl_stmt|;
-name|newField
+operator|(
+name|term
 operator|=
 name|iter
 operator|.
 name|next
 argument_list|()
-expr_stmt|;
-if|if
-condition|(
-name|newField
+operator|)
+operator|!=
+literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|iter
+operator|.
+name|field
+argument_list|()
+operator|!=
+name|field
+condition|)
+block|{
+comment|// field changed
 name|field
 operator|=
 name|iter
@@ -2509,16 +2483,6 @@ operator|.
 name|field
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|field
-operator|==
-literal|null
-condition|)
-block|{
-comment|// No more terms:
-break|break;
-block|}
 name|queue
 operator|=
 operator|new
@@ -2630,15 +2594,6 @@ literal|null
 argument_list|)
 assert|;
 block|}
-comment|// Get next term to delete
-name|BytesRef
-name|term
-init|=
-name|iter
-operator|.
-name|term
-argument_list|()
-decl_stmt|;
 assert|assert
 name|checkDeleteTerm
 argument_list|(
