@@ -71,7 +71,7 @@ begin_class
 DECL|class|MergedPrefixCodedTermsIterator
 class|class
 name|MergedPrefixCodedTermsIterator
-implements|implements
+extends|extends
 name|FieldTermIterator
 block|{
 DECL|class|TermMergeQueue
@@ -310,7 +310,7 @@ annotation|@
 name|Override
 DECL|method|next
 specifier|public
-name|boolean
+name|BytesRef
 name|next
 parameter_list|()
 block|{
@@ -324,7 +324,7 @@ operator|==
 literal|0
 condition|)
 block|{
-comment|// Current field is done:
+comment|// No more terms in current field:
 if|if
 condition|(
 name|fieldQueue
@@ -341,7 +341,7 @@ operator|=
 literal|null
 expr_stmt|;
 return|return
-literal|true
+literal|null
 return|;
 block|}
 comment|// Transfer all iterators on the next field into the term queue:
@@ -360,11 +360,14 @@ argument_list|(
 name|top
 argument_list|)
 expr_stmt|;
-assert|assert
+name|field
+operator|=
 name|top
 operator|.
 name|field
-argument_list|()
+expr_stmt|;
+assert|assert
+name|field
 operator|!=
 literal|null
 assert|;
@@ -392,25 +395,46 @@ name|field
 argument_list|)
 condition|)
 block|{
-name|termQueue
-operator|.
-name|add
-argument_list|(
+name|TermIterator
+name|iter
+init|=
 name|fieldQueue
 operator|.
 name|pop
 argument_list|()
+decl_stmt|;
+assert|assert
+name|iter
+operator|.
+name|field
+operator|.
+name|equals
+argument_list|(
+name|field
+argument_list|)
+assert|;
+comment|// TODO: a little bit evil; we do this so we can == on field down below:
+name|iter
+operator|.
+name|field
+operator|=
+name|field
+expr_stmt|;
+name|termQueue
+operator|.
+name|add
+argument_list|(
+name|iter
 argument_list|)
 expr_stmt|;
 block|}
-name|field
-operator|=
-name|top
-operator|.
-name|field
-expr_stmt|;
 return|return
-literal|true
+name|termQueue
+operator|.
+name|top
+argument_list|()
+operator|.
+name|bytes
 return|;
 block|}
 else|else
@@ -429,14 +453,17 @@ name|top
 operator|.
 name|next
 argument_list|()
+operator|==
+literal|null
 condition|)
 block|{
-comment|// New field
 name|termQueue
 operator|.
 name|pop
 argument_list|()
 expr_stmt|;
+block|}
+elseif|else
 if|if
 condition|(
 name|top
@@ -444,9 +471,15 @@ operator|.
 name|field
 argument_list|()
 operator|!=
-literal|null
+name|field
 condition|)
 block|{
+comment|// Field changed
+name|termQueue
+operator|.
+name|pop
+argument_list|()
+expr_stmt|;
 name|fieldQueue
 operator|.
 name|add
@@ -454,7 +487,6 @@ argument_list|(
 name|top
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 else|else
 block|{
@@ -470,16 +502,9 @@ name|termQueue
 operator|.
 name|size
 argument_list|()
-operator|!=
+operator|==
 literal|0
 condition|)
-block|{
-comment|// Still terms left in this field
-return|return
-literal|false
-return|;
-block|}
-else|else
 block|{
 comment|// Recurse (just once) to go to next field:
 return|return
@@ -487,16 +512,9 @@ name|next
 argument_list|()
 return|;
 block|}
-block|}
-block|}
-annotation|@
-name|Override
-DECL|method|term
-specifier|public
-name|BytesRef
-name|term
-parameter_list|()
+else|else
 block|{
+comment|// Still terms left in this field
 return|return
 name|termQueue
 operator|.
@@ -505,6 +523,8 @@ argument_list|()
 operator|.
 name|bytes
 return|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
