@@ -553,45 +553,16 @@ operator|.
 name|termIterator
 argument_list|()
 decl_stmt|;
-name|String
-name|field
-init|=
-literal|null
-decl_stmt|;
 while|while
 condition|(
-literal|true
-condition|)
-block|{
-name|boolean
-name|newField
-init|=
 name|iter
 operator|.
 name|next
 argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|newField
-condition|)
-block|{
-name|field
-operator|=
-name|iter
-operator|.
-name|field
-expr_stmt|;
-if|if
-condition|(
-name|field
-operator|==
+operator|!=
 literal|null
 condition|)
 block|{
-break|break;
-block|}
-block|}
 name|bytesRef
 operator|.
 name|copyBytes
@@ -608,7 +579,10 @@ argument_list|(
 operator|new
 name|Term
 argument_list|(
+name|iter
+operator|.
 name|field
+argument_list|()
 argument_list|,
 name|bytesRef
 operator|.
@@ -755,16 +729,6 @@ argument_list|)
 operator|*
 name|RANDOM_MULTIPLIER
 decl_stmt|;
-name|int
-name|termsSinceFreeze
-init|=
-literal|0
-decl_stmt|;
-name|int
-name|queriesSinceFreeze
-init|=
-literal|0
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -817,9 +781,6 @@ name|term
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|queriesSinceFreeze
-operator|++
-expr_stmt|;
 block|}
 else|else
 block|{
@@ -829,9 +790,6 @@ name|addDelete
 argument_list|(
 name|term
 argument_list|)
-expr_stmt|;
-name|termsSinceFreeze
-operator|++
 expr_stmt|;
 block|}
 name|assertTrue
@@ -1528,45 +1486,16 @@ operator|.
 name|termIterator
 argument_list|()
 decl_stmt|;
-name|String
-name|field
-init|=
-literal|null
-decl_stmt|;
 while|while
 condition|(
-literal|true
-condition|)
-block|{
-name|boolean
-name|newField
-init|=
 name|iter
 operator|.
 name|next
 argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|newField
-condition|)
-block|{
-name|field
-operator|=
-name|iter
-operator|.
-name|field
-expr_stmt|;
-if|if
-condition|(
-name|field
-operator|==
+operator|!=
 literal|null
 condition|)
 block|{
-break|break;
-block|}
-block|}
 name|builder
 operator|.
 name|copyBytes
@@ -1583,7 +1512,10 @@ argument_list|(
 operator|new
 name|Term
 argument_list|(
+name|iter
+operator|.
 name|field
+argument_list|()
 argument_list|,
 name|builder
 operator|.
