@@ -145,19 +145,12 @@ operator|.
 name|iterator
 argument_list|()
 decl_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|iter
 operator|.
 name|next
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertNull
-argument_list|(
-name|iter
-operator|.
-name|field
 argument_list|)
 expr_stmt|;
 block|}
@@ -212,7 +205,7 @@ operator|.
 name|iterator
 argument_list|()
 decl_stmt|;
-name|assertTrue
+name|assertNotNull
 argument_list|(
 name|iter
 operator|.
@@ -227,6 +220,7 @@ argument_list|,
 name|iter
 operator|.
 name|field
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -241,19 +235,12 @@ name|utf8ToString
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|assertNull
 argument_list|(
 name|iter
 operator|.
 name|next
 argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertNull
-argument_list|(
-name|iter
-operator|.
-name|field
 argument_list|)
 expr_stmt|;
 block|}
@@ -384,47 +371,17 @@ operator|.
 name|iterator
 argument_list|()
 decl_stmt|;
-name|String
-name|field
-init|=
-literal|""
-decl_stmt|;
 comment|//System.out.println("TEST: now iter");
 while|while
 condition|(
-literal|true
-condition|)
-block|{
-name|boolean
-name|newField
-init|=
 name|iter
 operator|.
 name|next
 argument_list|()
-decl_stmt|;
-comment|//System.out.println("  newField=" + newField);
-if|if
-condition|(
-name|newField
-condition|)
-block|{
-name|field
-operator|=
-name|iter
-operator|.
-name|field
-expr_stmt|;
-if|if
-condition|(
-name|field
-operator|==
+operator|!=
 literal|null
 condition|)
 block|{
-break|break;
-block|}
-block|}
 name|assertTrue
 argument_list|(
 name|expected
@@ -443,7 +400,10 @@ argument_list|,
 operator|new
 name|Term
 argument_list|(
+name|iter
+operator|.
 name|field
+argument_list|()
 argument_list|,
 name|iter
 operator|.
@@ -567,12 +527,17 @@ block|}
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|assertTrue
-argument_list|(
+name|BytesRef
+name|term
+init|=
 name|merged
 operator|.
 name|next
 argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|term
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -589,41 +554,31 @@ name|assertEquals
 argument_list|(
 literal|"a"
 argument_list|,
-name|merged
-operator|.
 name|term
-argument_list|()
 operator|.
 name|utf8ToString
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|assertFalse
-argument_list|(
+name|term
+operator|=
 name|merged
 operator|.
 name|next
 argument_list|()
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|term
 argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|"b"
 argument_list|,
-name|merged
-operator|.
 name|term
-argument_list|()
 operator|.
 name|utf8ToString
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|merged
-operator|.
-name|next
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -631,7 +586,7 @@ name|assertNull
 argument_list|(
 name|merged
 operator|.
-name|field
+name|next
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -863,17 +818,31 @@ name|lastTerm
 init|=
 literal|null
 decl_stmt|;
+name|BytesRef
+name|term
+decl_stmt|;
 while|while
 condition|(
-literal|true
-condition|)
-block|{
-if|if
-condition|(
+operator|(
+name|term
+operator|=
 name|actual
 operator|.
 name|next
 argument_list|()
+operator|)
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|field
+operator|!=
+name|actual
+operator|.
+name|field
+argument_list|()
 condition|)
 block|{
 name|field
@@ -883,20 +852,10 @@ operator|.
 name|field
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|field
-operator|==
-literal|null
-condition|)
-block|{
-break|break;
-block|}
 name|lastTerm
 operator|=
 literal|null
 expr_stmt|;
-comment|//System.out.println("\nTEST: new field: " + field);
 block|}
 if|if
 condition|(
@@ -908,26 +867,19 @@ name|lastTerm
 operator|.
 name|equals
 argument_list|(
-name|actual
-operator|.
 name|term
-argument_list|()
 argument_list|)
 condition|)
 block|{
 continue|continue;
 block|}
-comment|//System.out.println("TEST: iter: field=" + field + " term=" + actual.term());
 name|lastTerm
 operator|=
 name|BytesRef
 operator|.
 name|deepCopyOf
 argument_list|(
-name|actual
-operator|.
 name|term
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|assertTrue
@@ -955,10 +907,7 @@ name|Term
 argument_list|(
 name|field
 argument_list|,
-name|actual
-operator|.
 name|term
-argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
